welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: '{' expected but 'case' found.
  case (1,false) => return "7:00"
  ^alarmClock:4: error: '}' expected but 'case' found.
  case (2,false) => return "7:00"
  ^alarmClock:5: error: illegal start of definition
  case (3,false) => return "7:00"
  ^alarmClock:6: error: illegal start of definition
  case (4,false) => return "7:00"
  ^alarmClock:7: error: illegal start of definition
  case (5,false) => return "7:00"
  ^alarmClock:8: error: illegal start of definition
  case (6,false) => return "off"
  ^alarmClock:9: error: illegal start of definition
  case (0,false) => return "off"
  ^alarmClock:10: error: illegal start of definition
  case (1,true) => return "10:00"
  ^alarmClock:11: error: illegal start of definition
  case (2,true) => return "10:00"
  ^alarmClock:12: error: illegal start of definition
  case (3,true) => return "10:00"
  ^alarmClock:13: error: illegal start of definition
  case (4,true) => return "10:00"
  ^alarmClock:14: error: illegal start of definition
  case (5,true) => return "10:00"
  ^alarmClock:15: error: illegal start of definition
  case (6,true) => return "off"
  ^alarmClock:16: error: illegal start of definition
  case (0,true) => return "off"  
  ^alarmClock:18: error: eof expected but '}' found.
 }
 ^